--- a/code/Procfile
+++ b/code/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn --worker-class gevent --error-logfile /var/log/supervisor/requestbin.log --access-logfile /var/log/supervisor/requestbin.log --workers 4 --max-requests 1000 requestbin:app
+web: gunicorn --worker-class gevent --error-logfile /var/log/gunicorn/error.log --capture-output --access-logfile /var/log/gunicorn/access.log --workers 4 --max-requests 1000 requestbin:app
